--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -2,6 +2,10 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+.nav-item {
+  color: white;
+}
+
 a {
   font-family: Poppins;
   font-weight: bold;
@@ -11,8 +15,9 @@ a {
 input:hover {
   outline: none;
   border-color: #7e2ac3;
-  background-color: #fff;
+  background-color: #dfdfdf;
   box-shadow: 0 0 0 4px rgb(126 42 195 / 10%);
+  transition: all 0.5s;
 }
 
 .form-control:focus {
