--- a/src/css/CardSlider.css
+++ b/src/css/CardSlider.css
@@ -47,40 +47,54 @@
 }
 
 .card-slider-nav-right {
-  background: linear-gradient(
+  /* background: linear-gradient(
     to right,
     rgba(252, 252, 252, 0),
-    rgb(0, 0, 0, 0.75)
-  );
-  transition: opacity 0.5s ease;
-  opacity: 0.5;
+    rgb(0, 0, 0, 0)
+  ); */
+  /* transition: opacity 0.5s ease; */
+  background: transparent;
+  /* opacity: 0.5; */
+}
+
+.card-slider-nav-right svg {
+  color: white;
+  background: transparent;
+  filter: drop-shadow(0px 0px 0px #000000);
+  transition: all 0.2s ease;
+}
+
+.card-slider-nav-right svg:hover{
+  filter: drop-shadow(0px 0px 19px #000000);
+  transition: all 0.2s ease;
 }
 
 .card-slider-nav-right:hover {
-    opacity: 1;
+    /* opacity: 1;
     background: linear-gradient(
         to right,
         rgba(252, 252, 252, 0),
         rgb(0, 0, 0, 0.75)
       );
-    transition: opacity 0.5s ease;
+    transition: opacity 0.5s ease; */
 }
 
 .card-slider-nav-left {
     opacity: 0.5;
-    background: linear-gradient(
+    /* background: linear-gradient(
       to left,
       rgba(252, 252, 252, 0),
       rgb(0, 0, 0, 0.75)
-    );
+    ); */
+    background: transparent;
   }
 
 .card-slider-nav-left:hover {
     opacity: 1;
-    background: linear-gradient(
+    /* background: linear-gradient(
         to left,
         rgba(252, 252, 252, 0),
         rgb(0, 0, 0, 0.75)
-      );
+      ); */
     transition: opacity 0.5s;
 }
