added more card sliders on homepage, removed hero carousel from homepage

--- a/src/css/CardSlider.css
+++ b/src/css/CardSlider.css
@@ -1,5 +1,5 @@
 .card-slider {
-  overflow-x: auto;
+  overflow-x: hidden;
   overflow-y: hidden;
   position: relative;
   scroll-behavior: smooth;
